@@ -13,8 +13,12 @@ OpenLDAP 2.4.21 Release (2009/12/20)
 	Fixed slapo-dynlist behavior with simple filters (ITS#6421)
 	Fixed slapd-ldif access outside database directory (ITS#6414)
 	Fixed slapd-null extraneous assert (ITS#6403)
+	Fixed slapo-collect REP_ENTRY flag handling (ITS#5340,ITS#6423)
+	Fixed slapo-dynlist REP_ENTRY flag handling (ITS#5340,ITS#6423)
+	Fixed slapo-rwm REP_ENTRY flag handling (ITS#5340,ITS#6423)
 	Fixed slapo-translucent with back-null (ITS#6403)
 	Fixed slapo-unique criteria checking (ITS#6270)
+	Fixed slapo-valsort REP_ENTRY flag handling (ITS#5340,ITS#6423)
 	Build Environment
 		Deleted broken LBER_INVALID macro (ITS#6402)
 		Fixed test058 kill usage (ITS#6420)
